tests/transpiler/x/rs/membership.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:54 +0700
fn main() {
    let nums: Vec<i64> = vec![1, 2, 3];
    println!("{}", (2 in nums));
    println!("{}", (4 in nums));
}
